Optimization: change new Long() -> Long.valueOf